Test README with doctest

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ skip_missing_interpreters=True
 
 [testenv]
 deps=pytest
-commands=pytest {toxinidir}/tests
+commands=pytest {toxinidir}/README.rst {toxinidir}/tests
 
 [testenv:black]
 deps=black
