Add setup.py to tox commands

--- a/tox.ini
+++ b/tox.ini
@@ -9,23 +9,23 @@ commands=pytest {toxinidir}/README.rst {toxinidir}/tests
 
 [testenv:black]
 deps=black
-commands=black {toxinidir}/sksequitur {toxinidir}/tests
+commands=black {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
 
 [testenv:blackcheck]
 deps=black
-commands=black --check {toxinidir}/sksequitur {toxinidir}/tests
+commands=black --check {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
 
 [testenv:isort]
 deps=isort
-commands=isort {toxinidir}/sksequitur {toxinidir}/tests
+commands=isort {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
 
 [testenv:isortcheck]
 deps=isort
-commands=isort --check {toxinidir}/sksequitur {toxinidir}/tests
+commands=isort --check {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
 
 [testenv:flake8]
 deps=flake8
-commands=flake8 {toxinidir}/sksequitur {toxinidir}/tests
+commands=flake8 {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
 
 [testenv:pylint]
 deps=pylint
