--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,12 @@ addopts=
     --doctest-modules
 
 [testenv]
-deps=pytest
-commands=pytest {toxinidir}/README.rst {toxinidir}/tests
+deps=
+    pytest
+    pytest-cov
+    pytest-benchmark
+commands=
+    pytest --cov-fail-under 100 {toxinidir}/README.rst {toxinidir}/tests
 
 [testenv:black]
 deps=black
