Change ordering of sections/lines

--- a/tox.ini
+++ b/tox.ini
@@ -1,44 +1,44 @@
+[tox]
+envlist=blackcheck,isortcheck,flake8,pylint,mypy,py36,py37,py38,py39
+skip_missing_interpreters=True
+
 [pytest]
 addopts=
     --doctest-glob="*.rst"
     --doctest-modules
 
 [testenv]
+commands=
+    pytest --cov-fail-under 100 {toxinidir}/README.rst {toxinidir}/tests
 deps=
     pytest
     pytest-cov
     pytest-benchmark
-commands=
-    pytest --cov-fail-under 100 {toxinidir}/README.rst {toxinidir}/tests
 
 [testenv:black]
-deps=black
 commands=black {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
+deps=black
 
 [testenv:blackcheck]
-deps=black
 commands=black --check {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
-
-[testenv:isort]
-deps=isort
-commands=isort {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
-
-[testenv:isortcheck]
-deps=isort
-commands=isort --check {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
+deps=black
 
 [testenv:flake8]
-deps=flake8
 commands=flake8 {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
+deps=flake8
 
-[testenv:pylint]
-deps=pylint
-commands=pylint {toxinidir}/sksequitur
+[testenv:isort]
+commands=isort {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
+deps=isort
+
+[testenv:isortcheck]
+commands=isort --check {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
+deps=isort
 
 [testenv:mypy]
-deps=mypy
 commands=mypy {toxinidir}/sksequitur
+deps=mypy
 
-[tox]
-envlist=blackcheck,isortcheck,flake8,pylint,mypy,py36,py37,py38
-skip_missing_interpreters=True
+[testenv:pylint]
+commands=pylint {toxinidir}/sksequitur
+deps=pylint
