--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -6,6 +6,11 @@ jobs:
 
   checks:
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 5
+      matrix:
+        check: [blackcheck, isortcheck, flake8, pylint, mypy]
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -15,10 +20,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install tox
     - name: Run checks with tox
       run: |
-        tox -e blackcheck,isortcheck,flake8,pylint,mypy
+        tox -e ${{ matrix.check }}
 
   tests:
     needs: checks
@@ -27,12 +32,7 @@ jobs:
       max-parallel: 8
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest, ubuntu-16.04]
-        python-version: [3.6, 3.7, 3.8, 3.9, pypy3]
-        exclude:
-        # Excluded due to faulthandler bug:
-        # https://github.com/grantjenks/python-runstats/runs/301718278#step:5:13
-        - os: windows-latest
-          python-version: pypy3
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
     - name: Download Build Tools for Visual Studio 2019
@@ -54,7 +54,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install tox
 
     - name: Test with tox
       run: |
