--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Archive dist artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: dist-linux-3.6
+        name: wheels
         path: dist
 
   build-linux-cp37:
@@ -54,7 +54,7 @@ jobs:
     - name: Archive dist artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: dist-linux-3.7
+        name: wheels
         path: dist
 
   build-linux-cp38:
@@ -79,7 +79,7 @@ jobs:
     - name: Archive dist artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: dist-linux-3.8
+        name: wheels
         path: dist
 
   build-linux-cp39:
@@ -104,7 +104,7 @@ jobs:
     - name: Archive dist artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: dist-linux-3.8
+        name: wheels
         path: dist
 
   build-macos:
@@ -132,7 +132,7 @@ jobs:
     - name: Archive dist artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: dist-macos-${{ matrix.python-version }}
+        name: wheels
         path: dist
 
   build-windows:
@@ -166,7 +166,7 @@ jobs:
     - name: Archive dist artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: dist-windows-${{ matrix.python-version }}
+        name: wheels
         path: dist
 
   upload:
@@ -183,83 +183,17 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Create source dist
       run: python setup.py sdist
 
-    - name: Stage linux 3.6
+    - name: Stage wheels
       uses: actions/download-artifact@v2
       with:
-        name: dist-linux-3.6
-    - run: mv -v dist-linux-3.6/* dist/
-
-    - name: Stage linux 3.7
-      uses: actions/download-artifact@v2
-      with:
-        name: dist-linux-3.7
-    - run: mv -v dist-linux-3.7/* dist/
-
-    - name: Stage linux 3.8
-      uses: actions/download-artifact@v2
-      with:
-        name: dist-linux-3.8
-    - run: mv -v dist-linux-3.8/* dist/
-
-    - name: Stage linux 3.9
-      uses: actions/download-artifact@v2
-      with:
-        name: dist-linux-3.9
-    - run: mv -v dist-linux-3.9/* dist/
-
-    - name: Stage macos 3.6
-      uses: actions/download-artifact@v2
-      with:
-        name: dist-macos-3.6
-    - run: mv -v dist-macos-3.6/* dist/
-
-    - name: Stage macos 3.7
-      uses: actions/download-artifact@v2
-      with:
-        name: dist-macos-3.7
-    - run: mv -v dist-macos-3.7/* dist/
-
-    - name: Stage macos 3.8
-      uses: actions/download-artifact@v2
-      with:
-        name: dist-macos-3.8
-    - run: mv -v dist-macos-3.8/* dist/
-
-    - name: Stage macos 3.9
-      uses: actions/download-artifact@v2
-      with:
-        name: dist-macos-3.9
-    - run: mv -v dist-macos-3.9/* dist/
-
-    - name: Stage windows 3.6
-      uses: actions/download-artifact@v2
-      with:
-        name: dist-windows-3.6
-    - run: mv -v dist-windows-3.6/* dist/
-
-    - name: Stage windows 3.7
-      uses: actions/download-artifact@v2
-      with:
-        name: dist-windows-3.7
-    - run: mv -v dist-windows-3.7/* dist/
-
-    - name: Stage windows 3.8
-      uses: actions/download-artifact@v2
-      with:
-        name: dist-windows-3.8
-    - run: mv -v dist-windows-3.8/* dist/
-
-    - name: Stage windows 3.9
-      uses: actions/download-artifact@v2
-      with:
-        name: dist-windows-3.9
-    - run: mv -v dist-windows-3.9/* dist/
+        name: wheels
+    - run: mv -v wheels/* dist/
 
     - name: Upload with twine
       env:
