--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -193,6 +193,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: wheels
+        path: wheels
     - run: mv -v wheels/* dist/
 
     - name: Upload with twine
