--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=blackcheck,isortcheck,flake8,pylint,mypy,py36,py37,py38,py39
+envlist=blackcheck,isortcheck,flake8,pylint,mypy,py36,py37,py38,py39,rstcheck
 skip_missing_interpreters=True
 
 [pytest]
@@ -42,3 +42,7 @@ deps=mypy
 [testenv:pylint]
 commands=pylint {toxinidir}/sksequitur
 deps=pylint
+
+[testenv:rstcheck]
+commands=rstcheck {toxinidir}/README.rst
+deps=rstcheck
