Remove useless coverage switch

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ addopts=
 
 [testenv]
 commands=
-    pytest --cov-fail-under 100 {toxinidir}/README.rst {toxinidir}/tests
+    pytest {toxinidir}/README.rst {toxinidir}/tests
 deps=
     pytest
     pytest-cov
