Simplify running pytest and black

--- a/tox.ini
+++ b/tox.ini
@@ -6,21 +6,24 @@ skip_missing_interpreters=True
 addopts=
     --doctest-glob="*.rst"
     --doctest-modules
+    --cov=sksequitur
+    --cov-branch
+    --cov-fail-under=100
+    --cov-report=term-missing
 
 [testenv]
-commands=
-    pytest {toxinidir}/README.rst {toxinidir}/tests
+commands=pytest
 deps=
     pytest
     pytest-cov
     pytest-benchmark
 
 [testenv:black]
-commands=black {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
+commands=black .
 deps=black
 
 [testenv:blackcheck]
-commands=black --check {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
+commands=black --check .
 deps=black
 
 [testenv:flake8]
