Remove black "include" directive and specify paths in tox

--- a/tox.ini
+++ b/tox.ini
@@ -19,11 +19,11 @@ deps=
     pytest-benchmark
 
 [testenv:black]
-commands=black .
+commands=black {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
 deps=black
 
 [testenv:blackcheck]
-commands=black --check .
+commands=black --check {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
 deps=black
 
 [testenv:flake8]
