--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,13 @@ skip_missing_interpreters=True
 
 [pytest]
 addopts=
-    --doctest-glob="*.rst"
-    --doctest-modules
-    --cov=sksequitur
+    --benchmark-skip
     --cov-branch
     --cov-fail-under=100
     --cov-report=term-missing
+    --cov=sksequitur
+    --doctest-glob="*.rst"
+    --doctest-modules
 
 [testenv]
 commands=pytest
