--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -66,4 +66,4 @@ jobs:
       run: python setup.py build_ext --inplace
 
     - name: Test with pytest
-      run: pytest
+      run: pytest --cov-fail-under 0
