--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=blackcheck,isortcheck,flake8,pylint,mypy,py36,py37,py38,py39,rstcheck
+envlist=bluecheck,isortcheck,flake8,pylint,mypy,py36,py37,py38,py39,rstcheck
 skip_missing_interpreters=True
 
 [pytest]
@@ -19,13 +19,13 @@ deps=
     pytest-benchmark
     pytest-cov
 
-[testenv:black]
-commands=black {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
-deps=black
+[testenv:blue]
+commands=blue {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
+deps=blue
 
-[testenv:blackcheck]
-commands=black --check {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
-deps=black
+[testenv:bluecheck]
+commands=blue --check {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
+deps=blue
 
 [testenv:flake8]
 commands=flake8 {toxinidir}/setup.py {toxinidir}/sksequitur {toxinidir}/tests
