--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       max-parallel: 8
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest, ubuntu-16.04]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
